@@ -1,3 +1,10 @@
+2005-03-25  Jamey Sharp  <jamey@minilop.net>
+
+	* src/xcb.h, src/xcb_in.c:
+	Remove XCBEventQueueLength and XCBEventQueueClear: they're not
+	part of the new API, and they interfere with analysis of the
+	_xcb_list implementation.
+
 2005-03-24  Josh Triplett  <josh@freedesktop.org>
 
 	* configure.ac:
